refactor: 코드 정리 및 주석 수정